# canvas-roster-project

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
src/: create_canvas_assignments.py  make_photoroster.py  prototype.py
src/canvas_api_project/: __main__.py  create_canvas_assignments.py
src/canvas_roster_project/: __main__.py  make_photoroster.py
test/: test_create_canvas_assignments.py
tests/: test_create_canvas_assignments.py
tests/canvas_api_project/: test_create_canvas_assignments.py
tests/canvas_roster_project/: test_cli_smoke.py
