[project]
name = "canvas-api-project"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Jason Hemann", email = "jason.hemann@gmail.com"},
]
dependencies = [
    "requests>=2.32.3",
    "canvasapi>=3.2.0",
    "pyyaml>=6.0.2",
    "Pillow>=10.4.0",
    "reportlab>=4.2.5",
    "argparse>=1.4.0",
]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = true

[tool.mypy]
files = ["src", "tests"]
ignore_missing_imports = true

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[dependency-groups]
dev = [
    "pytest-mock",
    "black",
    "isort",
    "flake8>=7.1.2",
    "flake8-pyproject",
    "mypy",
    "pytest",
    "pytest-cov",
    "types-PyYAML>=6.0.12.20241230",
    "flake8-bugbear>=24.12.12",
    "flake8-comprehensions>=3.16.0",
    "flake8-return>=1.2.0",
    "flake8-quotes>=3.4.0",
    "flake8-simplify>=0.21.0",
    "pep8-naming>=0.14.1",
    "flake8-docstrings>=1.7.0",
    "memray>=1.15.0",
]
test = [
    "pytest>=8.3.4",
    "hypothesis>=6.111.1",
    "black>=25.1.0",
    "isort>=6.0.0",
    "flake8>=7.1.1",
    "flake8-pyproject>=1.2.3",
    "mypy>=1.15.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
]
